--- a/k8s/config.yml
+++ b/k8s/config.yml
@@ -6,7 +6,7 @@ data:
   POSTGRES_HOST: "localhost"
   POSTGRES_PORT: "5432"
   POSTGRES_DB: "coworking"
-#  POSTGRES_USER: "admin"
+#  POSTGRES_USER: "udacity"
 #  POSTGRES_PASSWORD: "admin@123"
 ---
 apiVersion: v1
@@ -15,5 +15,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USER: YWRtaW5AMTIz
-  POSTGRES_PASSWORD: YWRtaW4=
+  POSTGRES_USER: dWRhY2l0eQ==
+  POSTGRES_PASSWORD: YWRtaW5AMTIz
