--- a/k8s/postgres.yml
+++ b/k8s/postgres.yml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: postgresql-pvc
   labels:
     app.kubernetes.io/name: postgresql-pvc
 spec:
@@ -13,8 +14,9 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  name: postgres-pv
   labels:
-    app.kubernetes.io/name: my-manual-pv
+    app.kubernetes.io/name: postgres-pv
 spec:
   capacity:
     storage: 1Gi
@@ -25,14 +27,30 @@ spec:
   hostPath:
     path: "/mnt/data"
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgresql-service
+  labels:
+    app.kubernetes.io/name: postgresql-service
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 5432
+      targetPort: 5432
+  selector:
+    app.kubernetes.io/name: postgresql
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgresql
+  labels:
+    app.kubernetes.io/name: postgresql
 spec:
   selector:
     matchLabels:
-      app: postgresql
+      app.kubernetes.io/name: postgresql
   template:
     metadata:
       labels:
@@ -46,7 +64,7 @@ spec:
               valueFrom:
                 configMapKeyRef:
                   name: env-config
-                  key: POSTGRES_HOST
+                  key: POSTGRES_DB
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
